--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -152,11 +152,13 @@
                     messageStyle: "none"
             });
         </script>
+
 </head>
 <body>
     <div style="position: absolute; left: 0; top: 0; padding: 5px 0 0 5px; font-size: 1.05em;" id="bback">
       <a href="http://dapps.oraclize.it/" style="border-bottom: 1px dotted #2196F3; text-decoration: none;">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Ðapps list
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          Ðapps list
       </a>
     </div>
 
@@ -196,7 +198,7 @@
             <div class="fright right">
                 <button type="button" class="btn" data-toggle="collapse" data-target="#collapsedit"
                     id="buttoncollapseid">
-                    Advanced Mode
+                    Advanced Settings
                 </button>
                 <div style="margin-top:7px;"></div>
                 <span id="arrowifdisabled"></span>
@@ -216,7 +218,7 @@
             </div>
 
             <p class="lead">
-                StackExchange Question based escrow<br>
+                Bounties for StackExchange Questions<br>
             </p>
 
             <span class="text-muted">Powered by
@@ -247,15 +249,23 @@
 
                         <div class="form-inline">
                             <div class="form-group">
-                                <label for="gethIP" class="control-label">Connect to geth:</label>
-                                <input type="text" class="form-control" id="gethIP" style="width:200px;margin: 0 5px 0 5px;" value = "http://178.62.29.206:8083">
-                      <!--<input type="text" class="form-control" id="gethIP" style="width:200px;margin: 0 5px 0 5px;" value="http://localhost:8545">-->
-                                <span class="btn btn-default" id="submitgethIP">CONNECT</span>
+                                <label for="nodeIP" class="control-label">Connect to node:</label>
+                                <input type="text" class="form-control" id = "nodeIP" style="width:200px;margin: 0 5px 0 5px;" value = "http://localhost:8545">
+                      <!--<input type="text" class="form-control" id="nodeIP" style="width:200px;margin: 0 5px 0 5px;" value="http://localhost:8545">-->
+                                <span class="btn btn-default" id="submitNodeIP">CONNECT</span>
                             </div>
                         </div>
 
                         <div class="fleft" id="connected" style="display:none;">
                             <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Connected
+                        </div>
+
+                        <div class="fleft" id="unlocked" style="display:none;">
+                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Local Account Unlocked
+                        </div>
+
+                        <div class="fleft" id="locked" style="display:none;">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Local Account Locked
                         </div>
 
                         <div class="fleft" id="notconnected" style="display:none;">
@@ -286,8 +296,8 @@
 
         <div class="row" id="initiald">
             <div class="col-md-8 col-md-offset-2 center" id="content_init">
-                <span id="load_q"><img src="loadingnewc.gif" alt="loading"/> Loading, please wait...</span>
-                <h4 class="center" style="display:none;" id="content_title">Available questions with bounty:</h4><br>
+                <span id="loadingQuestion"><img src="loadingnewc.gif" alt="loading"/> Loading, please wait...</span>
+                <h4 class="center" style="display:none;" id="content_title">List of All Questions</h4><br>
                 <div id="questionList"></div>
             </div>
         </div>
@@ -362,6 +372,7 @@
     </div> <!-- /container -->
     <br>
     <hr>
+
     <footer class="footer">
           <div class="container">
             <p class="text-muted center">Designed by &nbsp;
@@ -383,8 +394,8 @@
                   <div class="center" style="margin-top:10px;margin-bottom:7px;">
                       <form class="form-inline">
                           <div class="form-group">
-                              <label for="StackExchURL">StackExchange URL</label>
-                              <input type="text" class="form-control" id="StackExchURL" placeholder="http://example.stackexchange.com/questions/1/example-of-question" style="width: 400px;">
+                              <label for="StackExchangeURL">StackExchange URL</label>
+                              <input type="text" class="form-control" id="StackExchangeURL" placeholder="http://example.stackexchange.com/questions/1/example-of-question" style="width: 400px;">
                           </div>
                           <span id="newQuestionResult" class="bg"></span>
                           <span id="loading_dep" style="display:none;"><br><img src="loadingnewc.gif" alt="loading"/> Loading, please wait...</span>
@@ -397,12 +408,12 @@
           </div>
         </div>
     </div>
-    <script type="text/javascript" src = "script.js"></script>
+    <script src = "script.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-59380873-1', 'auto');
       ga('send', 'pageview');
