--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -179,7 +179,7 @@
                 <h4 class="modal-title" id="myModalLabel">Sponsor this question</h4>
               </div>
               <div class="modal-body center">
-                Becoming a sponsor for this question is that easy you just need to deposit any amount to this Ethereum address through any wallet and then reload the page:
+                  You can become a sponsor for this question by sending a transaction with any wallet to the following Ethereum address. The transaction must have a custom gas value of 40000.
                 <div class="center" style = "margin-top:10px;margin-bottom:7px;">
                   <input type="text" value="" id="contractAddrInput" class="form-control" style="width: 400px; display: inline-block; right: 0; left: 0; text-align: center;border-radius: 5px;-moz-border-radius:5px;border: 1px dashed #B5B5B5;background-color: #F5F5F5;" readonly onclick="this.select();"/>
                 </div>
@@ -205,7 +205,7 @@
 
                 <button type="button" class="btn btn-info" style="display:none;"
                     data-target="#addNewQuestionDiv" id="addNewQuestionBtn"
-                    title="Please connect to your local unlocked node before"
+                    title = "Please connect to your local unlocked node before"
                     data-toggle="modal" disabled >
                     Add a new question
                 </button>
@@ -258,14 +258,6 @@
 
                         <div class="fleft" id="connected" style="display:none;">
                             <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Connected
-                        </div>
-
-                        <div class="fleft" id="unlocked" style="display:none;">
-                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Local Account Unlocked
-                        </div>
-
-                        <div class="fleft" id="locked" style="display:none;">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Local Account Locked
                         </div>
 
                         <div class="fleft" id="notconnected" style="display:none;">
@@ -393,10 +385,14 @@
                               <label for="StackExchangeURL">StackExchange URL</label>
                               <input type="text" class="form-control" id="StackExchangeURL" placeholder="http://example.stackexchange.com/questions/1/example-of-question" style="width: 400px;">
                           </div>
+                           <div class="form-group">
+                               <label for="BountyAmount">Bounty Amount</label>
+                               <input type="text" class="form-control" id="BountyAmount"
+                                    placeholder ="The default bounty is 0.1 ether" style="width: 400px;">
+                           </div>
                           <span id="newQuestionResult" class="bg"></span>
                           <span id="loading_dep" style="display:none;"><br><img src="loadingnewc.gif" alt="loading"/> Loading, please wait...</span>
                 </div>
-                The default bounty is 0.1 ether
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal" id="newQuestionClose">Close</button>
                 <button type="button" class="btn btn-primary" id="newQuestionSubmit">ADD</button>
