--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -14,9 +14,6 @@
   <script type="text/javascript" src="https://pagedown.googlecode.com/hg/Markdown.Editor.js"></script>
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full"></script>
   <script type="text/javascript" src="MJPDEditing.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
-  <script src="http://inacho.github.io/bootstrap-markdown-editor/dist/js/bootstrap-markdown-editor.js"></script>
 
   <noscript>
     <style type="text/css">
@@ -120,7 +117,14 @@
     height: 45px;
   }
   </style>
-        <script>
+   <script>
+            MathJax.Hub.Config({"HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"], linebreaks: { automatic:true }, EqnChunk: (MathJax.Hub.Browser.isMobile ? 10 : 50) },
+                tex2jax: { inlineMath: [ ["$", "$"], ["\\\\(","\\\\)"] ], displayMath: [ ["$$","$$"], ["\\[", "\\]"] ], processEscapes: true, ignoreClass: "tex2jax_ignore|dno" },
+                TeX: {  noUndefined: { attributes: { mathcolor: "red", mathbackground: "#FFEEEE", mathsize: "90%" } }, Macros: { href: "{}" } },
+                messageStyle: "none"
+            });
+    </script>
+        <!-- <script>
             MathJax.Hub.Config({
                     "HTML-CSS":
                     {
@@ -151,7 +155,7 @@
                     },
                     messageStyle: "none"
             });
-        </script>
+        </script> -->
 
 </head>
 <body>
@@ -250,7 +254,7 @@
                         <div class="form-inline">
                             <div class="form-group">
                                 <label for="nodeIP" class="control-label">Connect to node:</label>
-                                <input type="text" class="form-control" id = "nodeIP" style="width:200px;margin: 0 5px 0 5px;" value = "http://localhost:8545">
+                                <input type="text" class="form-control" id = "nodeIP" style="width:200px;margin: 0 5px 0 5px;" value = "http://178.62.29.206:8082/">
                       <!--<input type="text" class="form-control" id="nodeIP" style="width:200px;margin: 0 5px 0 5px;" value="http://localhost:8545">-->
                                 <span class="btn btn-default" id="submitNodeIP">CONNECT</span>
                             </div>
@@ -276,10 +280,7 @@
 
         <div class="alert alert-success" role="alert" id="end" style="display:none;">
               <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
-              This smart contract was <u>resolved</u> on <span class="expdateinfo" class="b"></span>.
-              At the given date the question had <span id="answer_acc" class="b"></span>,
-              hence the goal <span id="resultcontr" class="b"></span> reached.
-              Given that, <span id="resultsuccess"></span>
+              This smart contract was <u>resolved</u> on the <span id="expdateinfo" class="b"></span>. At the given date the question had <span id="answer_acc" class="b"></span>, hence the goal <span id="resultcontr" class="b"></span> reached. Given that, <span id="resultsuccess"></span>
         </div>
 
         <div class="row" id="initiald">
@@ -316,14 +317,14 @@
                     </div>
                 </div>
 
-                <div class="panel panel-primary">
+                <div id = 'panel-expiry-date' class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Expiry date</h3>
+                        <h3 class="panel-title">Expiry Date</h3>
                     </div>
 
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <span id="expdateinfo"></span>
+                            <span id="expiry-date"></span>
                         </div>
                     </div>
                 </div>
@@ -335,7 +336,7 @@
                     <hr>
                     <div id="wmd-button-bar-customsuffix" style="display: none;"></div>
                     <span id="wmd-preview-customsuffix"></span>
-                    <textarea id="wmd-input-customsuffix" style="display:none;" type="hidden"></textarea>
+                    <textarea id="wmd-input-customsuffix" style="display: none" type="hidden"></textarea>
                     <span id="place_h" style="display:none;"></span>
                     <div class="right" style="margin-top:-5px;">
                         <span id="q_owner"></span>
@@ -388,7 +389,7 @@
                            <div class="form-group">
                                <label for="BountyAmount">Bounty Amount</label>
                                <input type="text" class="form-control" id="BountyAmount"
-                                    placeholder ="The default bounty is 0.1 ether" style="width: 400px;">
+                                    value = "0.1" style="width: 400px;">
                            </div>
                           <span id="newQuestionResult" class="bg"></span>
                           <span id="loading_dep" style="display:none;"><br><img src="loadingnewc.gif" alt="loading"/> Loading, please wait...</span>
