Update Oraclize node

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -5,7 +5,7 @@
 	<title>Stackexchange Bounty Contract - Powered by Ethereum + Oraclize</title>
   <link rel="icon" type="image/png" href="favicon.png">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script type="text/javascript" src="web3.min.js"></script>
+	<script type="text/javascript" src="../web3.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css">
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
@@ -254,7 +254,7 @@
                         <div class="form-inline">
                             <div class="form-group">
                                 <label for="nodeIP" class="control-label">Connect to node:</label>
-                                <input type="text" class="form-control" id = "nodeIP" style="width:200px;margin: 0 5px 0 5px;" value = "http://178.62.29.206:8082/">
+                                <input type="text" class="form-control" id = "nodeIP" style="width:200px;margin: 0 5px 0 5px;" value = "http://eth-testnet-node-1.oraclize.it">
                       <!--<input type="text" class="form-control" id="nodeIP" style="width:200px;margin: 0 5px 0 5px;" value="http://localhost:8545">-->
                                 <span class="btn btn-default" id="submitNodeIP">CONNECT</span>
                             </div>
