Change Markdown URL
fix 404 error (missing files)

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css">
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
-  <script type="text/javascript" src="https://pagedown.googlecode.com/hg/Markdown.Converter.js"></script>
-  <script type="text/javascript" src="https://pagedown.googlecode.com/hg/Markdown.Sanitizer.js"></script>
-  <script type="text/javascript" src="https://pagedown.googlecode.com/hg/Markdown.Editor.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pagedown/1.0/Markdown.Converter.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pagedown/1.0/Markdown.Sanitizer.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pagedown/1.0/Markdown.Editor.min.js"></script>
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full"></script>
   <script type="text/javascript" src="MJPDEditing.js"></script>
 
